feat: customer_closed process now works with alexa